--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -9,11 +9,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0",
-    "styled-reset": "^4.3.4"
+    "@dashboard/library": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
