--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "lerna run build",
     "clean": "lerna clean",
     "diff": "npx lerna diff",
-    "version": "lerna version"
+    "version": "lerna version",
+    "publish": "lerna publish"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
