--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dashboard/content",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "components library",
   "author": "",
   "license": "ISC",
@@ -10,7 +10,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@dashboard/library": "1.0.0"
+    "@dashboard/library": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
