--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dashboard/host",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "author": "",
   "main": "webpack.config.js",
@@ -10,7 +10,7 @@
     "serve": "serve dist -p 9001"
   },
   "dependencies": {
-    "@dashboard/library": "1.0.0"
+    "@dashboard/library": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
