--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dashboard/layout",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "author": "",
   "main": "webpack.config.js",
@@ -9,7 +9,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@dashboard/library": "1.0.0"
+    "@dashboard/library": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
